cka/scripts/secure/01_secure_sa_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-sa
spec:
  containers:
  - name: c
    image: harbor.kubemsb.com/library/nginx-web:0.1
  serviceAccountName: nginx-sa
