cka/scripts/secure/09_calico_kubemsb1_deny_all.yaml
# 禁止kubemsb1 ns中的所有流量
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubemsb1-deny-all
  namespace: kubemsb1
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
