cka/scripts/secure/14_calico_kubemsb1_port.yaml
# 设置10.244.3.0/24段Pod仅开放80端口
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubemsb1-port
  namespace: kubemsb1
spec:
  policyTypes: ["Ingress", "Egress"]
  podSelector: {}
  egress:
  - {}
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
        except:
        - 10.244.3.0/24
    ports:
    - port: 80
      protocol: TCP
